팝업 추가 및 통신문제 예외처리, 기타 수정 - 설문조사 요청 팝업 추가(별도 액티비티 구성) - 로그아웃 경고 팝업 추가(별도 액티비티 구성 안함) - 네트워크 연결 안 되어 있으면 네트워크 연결하라는 팝업 추가(별도 액티비티 구성 안함) - Main, Login, Regist, Check, Confirm, Personal 액티비티 네트워크 통신 예외처리 - 관람 완료된 사용자만 Confirm 액티비티(확인증)에 접근 가능함 - 관람 완료된 사용자는 관람 현황에 들어가면 관람 종료 시간, 총 관람시간 확인 가능 - 로그인 화면 레이아웃 수정(군번에 드롭박스 및 글자수 제한 추가) - 최초등록 휴대폰번호 가운데칸 4자리 입력하면 자동으로 다음칸으로 커서 이동 - 메인 버튼 디자인 변경(배경 삭제) - 메인 메뉴 로그아웃 버튼에 문구 추가 및 위치 하단으로 이동 - 그 외 기타등등

--- a/app/src/main/res/drawable/custom_main_button.xml
+++ b/app/src/main/res/drawable/custom_main_button.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" android:state_focused="false">
+
+    <item android:state_pressed="false" android:state_focused="false"
+        android:state_enabled="true">
         <shape>
             <stroke
                 android:width="2dip" android:color="#555555"/>
-
             <corners android:radius="2dip"/>
-
             <solid
                 android:color="@color/transparent" />
-
             <padding
                 android:left="7dip"
                 android:right="7dip"
@@ -17,16 +16,15 @@
                 android:bottom="7dip" />
         </shape>
     </item>
-    <item android:state_pressed="false" android:state_focused="true">
+
+    <item android:state_pressed="false" android:state_focused="true"
+        android:state_enabled="true">
         <shape>
             <stroke
                 android:width="2dip" android:color="#555555"/>
-
             <corners android:radius="2dip"/>
-
             <solid
                 android:color="@color/transparent" />
-
             <padding
                 android:left="7dip"
                 android:right="7dip"
@@ -34,17 +32,15 @@
                 android:bottom="7dip" />
         </shape>
     </item>
-    <item android:state_pressed="true">
+
+    <item android:state_pressed="true"
+        android:state_enabled="true">
         <shape>
             <stroke
                 android:width="2dip" android:color="#555555"/>
-
             <corners android:radius="2dip"/>
-
             <solid
-                android:color="#1A000000" />
-
-
+                android:color="#80BBB7B7" />
             <padding
                 android:left="7dip"
                 android:right="7dip"
@@ -52,14 +48,14 @@
                 android:bottom="7dip" />
         </shape>
     </item>
+
     <item android:state_enabled="false">
         <shape>
+            <stroke
+                android:width="2dip" android:color="#C9C9C9"/>
             <corners android:radius="2dip"/>
-
-            <gradient
-                android:startColor="#F5F5F5" android:endColor="#F5F5F5"
-                android:angle="270" />
-
+            <solid
+                android:color="@color/transparent" />
             <padding
                 android:left="7dip"
                 android:right="7dip"
