--- a/app/src/main/res/layout/popup_permission.xml
+++ b/app/src/main/res/layout/popup_permission.xml
@@ -41,7 +41,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:textAlignment="center"
                 android:text="가 필요합니다."
                 android:textSize="16sp"
                 android:fontFamily="@font/m_gothic_normal"
@@ -89,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:text="위치정보"
+            android:text="네트워크 접속 상태"
             android:textAlignment="center"
             android:textSize="14sp"
             android:fontFamily="@font/m_gothic_normal"
@@ -98,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:text="카메라"
+            android:text="사진 및 동영상 촬영"
             android:textAlignment="center"
             android:textSize="14sp"
             android:fontFamily="@font/m_gothic_normal"
@@ -107,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="블루투스"
+            android:text="위치 정보"
             android:textAlignment="center"
             android:textSize="14sp"
             android:fontFamily="@font/m_gothic_normal"
