--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -187,6 +187,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_gravity="center_vertical"
+                android:nextFocusDown="@id/et_phone_2"
                 android:textColorHint="@color/hintText"
                 android:textSize="16sp"
                 android:inputType="phone"
