--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,8 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:layout_gravity="start">
 
         <!-- 슬라이드 메뉴 닫기 버튼 -->
         <RelativeLayout
