Ocr 팝업 추가, CheckActivity 버그 수정

--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -54,7 +54,7 @@
 
         <TableLayout
             android:id="@+id/table"
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="#000000"
