--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -37,6 +37,24 @@
             android:textSize="24sp"
             android:fontFamily="@font/m_gothic_extrabold"/>
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="60dp"
+            android:background="@drawable/download"
+            android:onClick="onDownload" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/share"
+            android:onClick="onShare" />
+
     </RelativeLayout>
 
     <ImageView
@@ -46,9 +64,11 @@
         android:layout_below="@+id/title_confirm"/>
 
     <RelativeLayout
-
+        android:id="@+id/content_confirm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:background="#FFFFFF"
         android:layout_below="@+id/title_confirm"
         android:layout_marginTop="20dp">
 
@@ -59,7 +79,7 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_vertical"
             android:fontFamily="@font/m_gothic_bold"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:textSize="25sp"
             android:text="확 인 증"
             android:textColor="@color/focusText"/>
