--- a/app/src/main/res/layout/popup_permission.xml
+++ b/app/src/main/res/layout/popup_permission.xml
@@ -88,7 +88,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:text="네트워크 접속 상태"
+            android:text="내 기기 위치 정보"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            android:fontFamily="@font/m_gothic_normal"
+            android:textColor="@color/unfocusText" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:text="사진, 미디어, 파일 접근"
             android:textAlignment="center"
             android:textSize="14sp"
             android:fontFamily="@font/m_gothic_normal"
@@ -106,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="위치 정보"
+            android:text="기기 정보"
             android:textAlignment="center"
             android:textSize="14sp"
             android:fontFamily="@font/m_gothic_normal"
